<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sobrenos"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="104dp"
        android:layout_height="93dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="46dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:fontFamily="@font/alata"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="261dp"
        android:layout_height="87dp"
        android:fontFamily="@font/alata"
        android:text="@string/descricao1"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        tools:layout_editor_absoluteY="271dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="262dp"
        android:layout_height="75dp"
        android:fontFamily="@font/alata"
        android:text="@string/descricao2"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        tools:layout_editor_absoluteY="379dp" />

    <Button
        android:id="@+id/botaoorcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/veDark"
        android:text="@string/orcamento"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="482dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/quemsomos"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="213dp" />

</androidx.constraintlayout.widget.ConstraintLayout>