<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagorcamento"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="104dp"
        android:layout_height="93dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="46dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:fontFamily="@font/alata"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="184dp"
        android:layout_height="83dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/orcamento"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nomecompleto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        tools:layout_editor_absoluteY="304dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/projeto"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        tools:layout_editor_absoluteY="431dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        tools:layout_editor_absoluteY="369dp" />

    <Button
        android:id="@+id/bEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/veDark"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine2"
        tools:layout_editor_absoluteY="519dp" />

</androidx.constraintlayout.widget.ConstraintLayout>