<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray"
    >

    <Button
        android:id="@+id/botaoLogin"
        android:layout_width="96dp"
        android:layout_height="52dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/veDark"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="@+id/senha"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/senha"
        app:layout_constraintTop_toTopOf="@+id/senha" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="@+id/Login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Login"
        app:layout_constraintTop_toTopOf="@+id/Login" />

    <EditText
        android:id="@+id/Login"
        android:layout_width="276dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="262dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="289dp"
        android:layout_height="45dp"
        android:fontFamily="@font/alata"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="166dp" />

</androidx.constraintlayout.widget.ConstraintLayout>